[tool.poetry]
name = "porter"
version = "3.7.0"
authors = ["NuCypher <dev@nucypher.com>"]
description = "The gateway for TACo application operations on the Threshold Network."

[tool.poetry.dependencies]
python = ">=3.9,<4"
nucypher = {git = "https://github.com/derekpierre/nucypher.git", branch = "secreto"}
nucypher-core = "==0.13.0"  # must be the same as nucypher
flask-cors = "*"
prometheus-flask-exporter = "*"


[tool.poetry.group.dev.dependencies]
nucypher = {git = "https://github.com/derekpierre/nucypher.git", branch = "secreto", develop = true, extras = ["dev"]}  # needed for testerchain, and must be editable
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
# Tools
pre-commit = "^2.12.1"
coverage = "^7.3.2"
maya = "*"
eth-ape = ">=0.8,<=0.8.12"  # limit due to existing underlying dependency restrictions (simpler than doing them individually)


[tool.towncrier]
    package = "nucypher-porter"
    package_dir = "nucypher-porter"
    filename = "docs/source/release_notes/releases.rst"
    directory = "newsfragments"
    underlines = ["-", "~", "^", "*"]
    issue_format = "`#{issue} <https://github.com/nucypher/nucypher-porter/issues/{issue}>`__"
    title_format = "v{version} ({project_date})"

    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = true

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["porter"]
